--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(assignment1)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(assignment1 main.cpp Vec3.cpp Vec3.h Camera.cpp Camera.h Ray.cpp Ray.h Sphere.cpp Sphere.h)
+add_executable(assignment1 main.cpp Vec3.cpp Vec3.h)
